Add new recipes - tacos & soup

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Recipes | Homepage</title>
+	<title>Recipes</title>
 </head>
 
 <body>
@@ -10,7 +10,17 @@
 	<a href="./recipes/lasagna.html" target="_blank">
 		<img src="./img/lasagna.jpg" alt="a picture of lasagna"> 
 		<p>Homemade Lasagna</p>
-	</a>	
+	</a>
+
+	<a href="./recipes/tacos.html" target="_blank">
+		<img src="./img/tacos.jpg" alt="a picture of tacos"> 
+		<p>Tacos</p>
+	</a>
+
+	<a href="./recipes/soup.html" target="_blank">
+		<img src="./img/soup.jpg" alt="a picture of soup"> 
+		<p>Soup</p>
+	</a>
 </body>	
 
 </html>
